# brainstem_python_api_tools

./: .gitignore  README.md  authentication.py  brainstem_api_client.py  brainstem_api_tutorial.ipynb  brainstem_api_tutorial.py  brainstem_api_tutorial_new.ipynb  brainstem_rest_tutorial.py  client.py  delete_model.py  examples_client.ipynb  get_app_from_model.py  load_model.py  load_settings.py  pyproject.toml  save_model.py  setup.py  stem_get_app_from_model.py  stem_load_model.py  stem_load_settings.py  stem_save_model.py  stem_set_basic_authorization.py  stem_tutorial.py
.github/workflows/: tests.yml
brainstem_api_tools/: __init__.py  brainstem_api_client.py  cli.py
common/: get_model.py  load_settings.py  post_model.py  put_model.py  set_basic_authorization.py
stem/: stem_dataset.py  stem_project.py
tests/: test_client.py
tools/: nwb.py  nwb_tutorial.py  requirements.txt
